# process_handle

./: CMakeLists.txt  README.md  appveyor.yml
include/: process_handle.hpp
include/detail/: config.hpp  handle_storage_apple.hpp  handle_storage_linux.hpp  handle_storage_windows.hpp
include/process_handle/: linux_storage.hpp  osx_storage.hpp  windows_storage.hpp
test/: CMakeLists.txt  main.cpp
